--- a/blogs/source/_posts/TI10观赛｜第二天｜白学家逆天改命，小象高开低走.md
+++ b/blogs/source/_posts/TI10观赛｜第二天｜白学家逆天改命，小象高开低走.md
@@ -17,3 +17,6 @@ tags:
 ## LGD 2:0 Fnatic
 
 第一局中，LGD选出虚空假面时间结节配合卡尔毁天灭地的技能组合。前期由于火卡战斗力偏弱，LGD陷入巨大劣势，经济劣势达到7k。在卡尔发育得到A杖后，通过与虚空假面的良好技能配合，秒杀Raven操刀的露娜。后续团战延续完美的团队配合，最终翻盘。小小有跳刀配合大吹风救下露娜的亮眼操作，然而落地依然被冰龙大招控制，后又被卡尔吹风极冷陨石天火一套技能直接秒杀。最终LGD稳健破路并取得了第一局比赛的胜利。
+
+第二句LGD拿出莫言绝活修补匠，外加Faith_bian绝活马格纳斯配合萧瑟恐怖利刃，一场究极刷钱局就在路上了。近期天梯上鞭酱的长角抛物运用十分熟练，开团也很合理。Fnatic则是精灵飞机前来迎战。开局五分钟，Fnatci的上路大鱼精灵组合取得优势，恐怖利刃只能钻野。中路是莫言的修补匠取得小优，下路双方均势。七分钟Fnatic中路蓝猫下路游走，被修补匠反蹲，猛犸果断两集反转，直接击杀Fnatic两人，紧接着又在上路修补匠配合大牛击杀大鱼。前期两队有来有回十分激烈。16分钟在夜宴LGD野区爆发团战，LGD一换三击杀精灵蓝猫和石鳞剑士，己方只损失萨尔。17分钟天辉方趁着马格纳斯没大恐怖利刃没变身的时机成功偷盾。后续中路爆发团战，恐怖利刃省下变身技能，LGD被0换3并交出马格纳斯大招，萨尔修补匠和马格纳斯三人阵亡。局势再次变回均势。22分钟LGD利用Fnatic深追脱节，通过马格纳斯大招与恐怖利刃换血成功击杀带盾飞机，大鱼人，精灵以及滚滚四人建立6k的经济优势。27分钟LGD上高，恐怖利刃变身站上高地，破掉高地塔，但自己被秒，后续相继损失萨尔大牛二人，Fnatic趁势直接打盾，局势再次扑朔迷离。28分钟马格纳斯修补匠想要击杀蓝猫，马格纳斯大招被蓝猫球状闪电躲避，后马格纳斯被击杀。之后大牛萨尔被大鱼和蓝猫分别击杀，经济持平。31分钟，Fnatic上路推进完开雾奔袭自家野区，被变身TB一顿输出，损失滚滚和下路二塔。33分钟，LGD开雾出门突袭中路与天辉野区，天辉方Fnatic抱团在夜宴方LGD野区龟缩，LGD扑空。35分钟Fnatic开雾直奔LGD视野完美的天辉野区，被LGD以大牛的代价击杀蓝猫精灵与滚滚。顺势上高，马格纳斯大招击杀大鱼飞机。Fnatic精灵蓝猫大鱼飞机四人买活强行打赢团战，蓝猫买活阵亡，但是成功守下高地，四人买活也让LGD经济略有领先。38分钟修补匠下路吸引天辉三人，LGD顺势打盾，秒杀滚滚，滚滚买活，肉山剩下六分之一血量，永恒之盘的大鱼冲进肉山被马格纳斯拱进人堆阵亡但也争取了时间，飞机偷盾，后又带盾阵亡。Fnatic两人阵亡不能买活，LGD上高，TB拆家过程中被杀不能买活，双方殊死一搏，最终Fnatic五人阵亡不能买活打出GG，LGD41分钟最终胜出。这场比赛有惊无险，感觉TB和马格纳斯的阵容中后期存在技能真空期容易被对手趁机打出优势，如何在技能真空期做好过渡是个需要思考的问题。
+
