--- a/blogs/source/_posts/TI10观赛｜第二天｜白学家逆天改命，小象高开低走.md
+++ b/blogs/source/_posts/TI10观赛｜第二天｜白学家逆天改命，小象高开低走.md
@@ -6,13 +6,15 @@ tags:
 
 ## 次日情况汇总
 
-
+IG战队再接再厉，第二日取得了4:0的全胜战绩，依旧领跑积分榜。LGD则是取得3:1的战绩。VG第二日表现惊艳，取得6:0的战绩，一跃超过LGD来的B组第一。Aster第二日略有起色，3:1的战绩使得他们为了A组第7，只要能够超过A队就能够进入淘汰赛，希望后续再接再厉。相比之下小象第二天的战绩就比较惨淡，0:2输给VG后又0:2输给TS，虽然1:1战平秘密，但是排名已经掉到了B组第五，希望五兄弟找找原因在第三个比赛日重振旗鼓。
 
 ## Aster 2:0 OG
 
 白学家带病付出，首局险胜，次局碾压。
 
-次局比赛中，白学家
+首局比赛OG选出了水牛体系加上中单小小，酱油选出冰魂天怒，是强爆发秒人的阵容，Aster使用精灵拍拍组合配合蓝猫中单兽王三号位，五号位蚂蚁通过救人针对对面的秒人体系。精灵的魔晶链子效果极佳，多次晕眩住水人和牛头造成击杀。最终Aster拿下比赛，也是感觉OG的水牛并不是如人们想象中的无敌姿态。
+
+次局比赛中，白学家拿出招牌火女，Monet则是拿出版本一哥小小，配合xxs的末日使者。相比之下OG的小骷髅龙骑兽王三核就显得战斗力比较差。对线十三分钟Aster就已经领先了3k经济，后续打团也是根本不虚，25分钟已经领先11k。如此碾压局中Aster也是发挥自己擅长防守的优势，极其稳健，最终雪球越滚越大，拿下比赛。
 
 ## LGD 2:0 Fnatic
 
